# MahjongAtHome

./: .env  .gitignore  Cargo.toml  Dioxus.toml  README.md  dev-pg-docker.yml  mahjong-at-home-docker.yml  math.toml
MahjongAtHomePhone/: settings.gradle.kts
MahjongAtHomePhone/app/: build.gradle.kts
MahjongAtHomePhone/app/src/androidTest/java/com/spoon/mahjongathomephone/: ExampleInstrumentedTest.kt
MahjongAtHomePhone/app/src/main/: AndroidManifest.xml
MahjongAtHomePhone/app/src/main/java/com/spoon/mahjongathomephone/: App.kt  MainActivity.kt
MahjongAtHomePhone/app/src/main/java/com/spoon/mahjongathomephone/ui/gallery/: GalleryFragment.kt  GalleryViewModel.kt
MahjongAtHomePhone/app/src/main/java/com/spoon/mahjongathomephone/ui/home/: HomeFragment.kt  HomeViewModel.kt
MahjongAtHomePhone/app/src/main/java/com/spoon/mahjongathomephone/ui/setting/: SettingFragment.kt  SettingViewModel.kt
MahjongAtHomePhone/app/src/main/res/layout/: app_bar_main.xml  fragment_home.xml
MahjongAtHomePhone/app/src/main/res/navigation/: mobile_navigation.xml
MahjongAtHomePhone/app/src/main/res/values/: strings.xml  themes.xml
MahjongAtHomePhone/app/src/main/res/values-night/: themes.xml
MahjongAtHomePhone/app/src/test/java/com/spoon/mahjongathomephone/: ExampleUnitTest.kt
MahjongAtHomePhone/gradle/: libs.versions.toml
MahjongAtHomePhone/gradle/wrapper/: gradle-wrapper.properties
mahjong-at-home-api/: .env  Cargo.toml  Dockerfile  Rocket.toml  diesel.toml
mahjong-at-home-api/migrations/2025-10-04-045834-0000_create_user_role/: down.sql  up.sql
mahjong-at-home-api/migrations/2025-10-04-072010-0000_create_mahjong_user/: down.sql  up.sql
mahjong-at-home-api/src/: db.rs  main.rs  result.rs  schema.rs  user.rs
mahjong-at-home-web/: Dockerfile  README.md  index.html  mahjong_at_hone.conf  package-lock.json  package.json  vite.config.js
mahjong-at-home-web/src/: App.vue  components.d.ts  main.js
mahjong-at-home-web/src/layouts/: MainLayout.vue
mahjong-at-home-web/src/requests/: request.js
mahjong-at-home-web/src/requests/api/: user.js
mahjong-at-home-web/src/router/: index.js
mahjong-at-home-web/src/stores/: user.js
mahjong-at-home-web/src/views/: SettingsView.vue  StartView.vue
migration/: Cargo.toml
migration/src/: lib.rs  m20251025_081315_create_role.rs  m20251025_083756_create_user.rs
src/: main.rs
src/components/: alert.rs  echo.rs  hero.rs  mod.rs
src/entities/: mod.rs  prelude.rs  role.rs  sea_orm_active_enums.rs  user.rs
src/models/: user.rs
src/server/: mod.rs  user.rs
src/views/: dashboard.rs  home.rs  login.rs  mod.rs  navbar.rs  page_not_found.rs
