[package]
name = "mahjong-at-home"
version = "0.1.0"
authors = ["Dead Poet Spoon <deadpoetspoon@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [".", "migration"]

[dependencies]
# dioxus = { git="https://github.com/dioxuslabs/dioxus", features = ["router", "fullstack"] }
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json", "with-chrono"], optional = true }
serde = { version = "1.0.228", features = ["serde_derive"] }
migration = {path = "./migration",optional=true}
tokio = "1.48.0"

[features]
# default = ["web"]
default = ["server"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
server = ["dioxus/server","dep:sea-orm","dep:migration"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
