[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
    "packages/migration"
]

[workspace.dependencies]
dioxus = { version = "0.7.3" }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
