[package]
name = "mahjong-at-home-api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = "2"
jsonwebtoken = {version = "10", default-features = false, features = ["rust_crypto"] }
serde = {version = "1.0", features = ["derive"] }

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]
