[package]
name = "mahjong-at-home-api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2", features = ["postgres"]}
jsonwebtoken = {version = "10", default-features = false, features = ["rust_crypto"] }
serde = {version = "1.0", features = ["derive"] }
password-auth = "1.0.0"
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]
